# organize

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  file.rs  lib.rs  main.rs
src/cli/: args.rs  parser.rs  tests.rs
src/file/: data.rs  ops.rs  tests.rs
