[package]
name = "org"
version = "0.0.1"
edition = "2024"

[dependencies]
exiftool = "0.3.1"
dirs = "6.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.44"

[profile.dev]
opt-level = 1
lto = "thin"

# While debugging, this ensures that JSON
# parsing logic is actually fast
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 2
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"