[package]
name = "org"
version = "0.0.1"
edition = "2024"

[dependencies]
nom-exif = "2.7.0"
dirs = "6.0.0"
chrono = "0.4.44"
walkdir = "2.5.0"

[profile.dev]
opt-level = 1
lto = "thin"

# While debugging, this ensures that JSON
# parsing logic is actually fast
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 2
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"